add footer and re-organize container

--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
             </div>
         </div>
         <nav class="level">
-            <div class="level-item has-text-centered">
+            <div class="thelevel level-item has-text-centered">
                 <div>
                     <p class="p1 heading1">#temanbaik yang terhubung</p>
                     <p class="p2 title1">2,900</p>
                 </div>
             </div>
-            <div class="level-item has-text-centered">
+            <div class="thelevel level-item has-text-centered">
                 <div>
                     <p class="p1 heading1">Donasi tersalurkan</p>
                     <p class="p2 title1">217</p>
                 </div>
             </div>
-            <div class="level-item has-text-centered">
+            <div class="thelevel level-item has-text-centered">
                 <div>
                     <p class="p1 heading1">Item terunggul</p>
                     <p class="p2 title1">#buku</p>
@@ -191,12 +191,10 @@
     <!--//-->
 
     <!--Main campaign-->
-    <div class="maincon">
-        <h2>
-            <p class="maincampaign has-text-centered" style="font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;"> Campaign untuk #temanbaik : </p>
-        </h2>
 
+    <div class="maincon">
         <div class="container">
+            <p class="maincampaign has-text-centered" style="font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;"> Campaign untuk #temanbaik : </p>
             <div class="tile is-ancestor">
                 <!---->
                 <div class="tile is-parent ">
@@ -452,17 +450,127 @@
     </div>
     <!---->
 
+    <!--Button-->
+    <div class="buttoncon container">
+        <h2>
+            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;">
+                Buat campaign dan Jadi relawan #terkumpul
+            </p>
+        </h2>
+        <h3>
+            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 20px;" > 
+                Dukungan #temanbaik akan membantu #temanbaik lainnya. 
+            </p>
+        </h3>
+        <br>
+        <br>
+        
+        <div class="columns has-text-centered is-centered">
+            <div class="column is-4">
+                <a class="button is-info is-large">Buat Campaign</a>
 
-
-
-
-
+            </div>
+            <div class="column is-4">
+                <a class="button is-success is-large">Jadi Relawan</a>
+            </div>
+        </div>
+    </div>
     <!--//-->
-
-
     <!--////-->
 
     <!--Footer-->
+    <footer class="footer">
+        <div class="container">
+            <div class="linksosmed">
+                <div class="columns">
+                    <div class="column is-7">
+                        <p style="color: white;">
+                            Temukan kami di :
+                        </p>
+                    </div>
+                    <div class="column is-2">
+                        <a href="#">
+                            <img id="fb" src="./image/facebook.png" alt="fb" width="32px" height="32px">
+                        </a>
+                    </div>
+                    <div class="column is-2">
+                        <a href="#">
+                            <img id="insta" src="./image/instagram.png" alt="insta" width="32px" height="32px">
+                        </a>
+                    </div>
+                    <div class="column is-2">
+                        <a href="#">
+                            <img id="twitter" src="./image/twitter-logo-on-black-background.png" alt="twitter" width="32px" height="32px">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="columns">
+                <div class="column is-9 is-offset-2">
+                    <div class="columns">
+                        <div class="column">
+                            <div class="content is-small">
+                                <figure class="image is-120x120">
+                                    <a href="#">
+                                        <img id="footerimage" src="./image/logoputih.png" alt="footer terkumpul">
+                                    </a>
+                                    <p class="has-text-left" style="color: white;">
+                                        #terkumpul adalah situs penggalang dan penyalur donasi dalam bentuk barang layak pakai.
+                                    </p>
+                                </figure>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="content is-small">
+                                <ul>
+                                    <h5 style="color: white; font-display: bold;">Utama</h5>
+                                    <li>
+                                        <a href="#">Buat Campaign</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Jadi Relawan</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Partnership NGO</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Parnership CSR</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Komunitas</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="content is-small">
+                                <ul>
+                                    <h5 style="color: white; font-display: bold;">#terkumpul</h5>
+                                    <li>
+                                        <a href="#">#terkumpul dan Cara Kerja</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" target="_blank">Bantuan</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" target="_blank">Press Release</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" target="_blank">Tentang</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="content is-small" style="color: white;">
+            Copyright 2018 - #terkumpul All Right Reserved
+        </p>
+    </footer>
     <!--////-->
 
 
