change footer margin

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     daripada dibiarkan?
                 </p>
                 <p>
-                    <a class="button is-primary animated slideInUp delay-4s" style="size: 20px;">Temukan Campaign</a>
+                    <a class="button is-primary is-large animated slideInUp delay-4s" style="font-size: 20px">Temukan Campaign</a>
                 </p>
             </div>
         </div>
@@ -114,11 +114,9 @@
     <!--//-->
 
     <!--Category campaign-->
-    <h2>
-        <p class="catcampaign has-text-centered" style=" font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;"> Donasikan barang berdasarkan kategori : </p>
+    <h2 class="categories">
+        <p class="has-text-centered" style=" font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;"> Donasikan barang berdasarkan kategori : </p>
     </h2>
-
-
     <div class="columns tile is-ancestor has-text-centered is-centered">
         <div class="column tile is-parent is-3 ">
             <article class="tile is-child box">
@@ -458,13 +456,13 @@
             </p>
         </h2>
         <h3>
-            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 20px;" > 
-                Dukungan #temanbaik akan membantu #temanbaik lainnya. 
+            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 20px;">
+                Dukungan #temanbaik akan membantu #temanbaik lainnya.
             </p>
         </h3>
         <br>
         <br>
-        
+
         <div class="columns has-text-centered is-centered">
             <div class="column is-4">
                 <a class="button is-info is-large">Buat Campaign</a>
@@ -508,17 +506,17 @@
 
 
             <div class="columns">
-                <div class="column is-9 is-offset-2">
+                <div class="column is-10 is-offset-1">
                     <div class="columns">
                         <div class="column">
                             <div class="content is-small">
-                                <figure class="image is-120x120">
+                                <figure class="image is-105x105 is-centered">
                                     <a href="#">
                                         <img id="footerimage" src="./image/logoputih.png" alt="footer terkumpul">
                                     </a>
                                     <p class="has-text-left" style="color: white;">
-                                        #terkumpul adalah situs penggalang dan penyalur donasi dalam bentuk barang layak pakai.
-                                    </p>
+                                            #terkumpul adalah situs penggalang dan penyalur donasi dalam bentuk barang layak pakai.
+                                        </p>
                                 </figure>
                             </div>
                         </div>
@@ -566,11 +564,13 @@
                     </div>
                 </div>
             </div>
+            <p class="content is-small" style="color: white;">
+                    Copyright 2018 - #terkumpul All Right Reserved
+                </p>
         </div>
-        <p class="content is-small" style="color: white;">
-            Copyright 2018 - #terkumpul All Right Reserved
-        </p>
+
     </footer>
+    
     <!--////-->
 
 
