navbar stay in top

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Navigator-->
     <section class="hero is-medium">
         <div class="hero-head">
-            <nav class="navbar is-fixed-top">
+            <nav class="navbar">
                 <div class="navbar-brand">
                     <a class="navbar-item">
                         <img src="./image/logobiru.png" alt="Logo">
