Add sign-in and register form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Navigator-->
     <section class="hero is-medium">
         <div class="hero-head">
-            <nav class="navbar">
+            <nav class="navbar ">
                 <div class="navbar-brand">
                     <a class="navbar-item">
                         <img src="./image/logobiru.png" alt="Logo">
@@ -45,12 +45,12 @@
 
                     <div class="navbar-end">
                         <span class="navbar-item level-right">
-                            <a class="button is-info">
+                            <a class="button is-info" href="masuk.html">
                                 <span>Masuk</span>
                             </a>
                         </span>
                         <span class="navbar-item level-right">
-                            <a class="button is-info">
+                            <a class="button is-info" href="daftar.html">
                                 <span>Daftar</span>
                             </a>
                         </span>
@@ -115,7 +115,7 @@
 
     <!--Category campaign-->
     <h2 class="categories">
-        <p class="has-text-centered" style=" font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;"> Donasikan barang berdasarkan kategori : </p>
+        <p class="has-text-centered" style=" font-family: 'PT Serif', serif; font-size: 40px; font-weight: bold;"> Donasikan barang berdasarkan kategori : </p>
     </h2>
     <div class="columns tile is-ancestor has-text-centered is-centered">
         <div class="column tile is-parent is-3 ">
@@ -190,9 +190,9 @@
 
     <!--Main campaign-->
 
-    <div class="maincon">
+    <div class="maincon" style="background-color: #CDE2FB">
         <div class="container">
-            <p class="maincampaign has-text-centered" style="font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;"> Campaign untuk #temanbaik : </p>
+            <p class="maincampaign has-text-centered" style="font-family: 'PT Serif', serif; font-size: 40px; font-weight: bold;"> Campaign untuk #temanbaik : </p>
             <div class="tile is-ancestor">
                 <!---->
                 <div class="tile is-parent ">
@@ -451,12 +451,12 @@
     <!--Button-->
     <div class="buttoncon container">
         <h2>
-            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 35px; font-weight: bold;">
+            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 40px; font-weight: bold;">
                 Buat campaign dan Jadi relawan #terkumpul
             </p>
         </h2>
         <h3>
-            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 20px;">
+            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 30px;">
                 Dukungan #temanbaik akan membantu #temanbaik lainnya.
             </p>
         </h3>
@@ -515,8 +515,8 @@
                                         <img id="footerimage" src="./image/logoputih.png" alt="footer terkumpul">
                                     </a>
                                     <p class="has-text-left" style="color: white;">
-                                            #terkumpul adalah situs penggalang dan penyalur donasi dalam bentuk barang layak pakai.
-                                        </p>
+                                        #terkumpul adalah situs penggalang dan penyalur donasi dalam bentuk barang layak pakai.
+                                    </p>
                                 </figure>
                             </div>
                         </div>
@@ -565,12 +565,12 @@
                 </div>
             </div>
             <p class="content is-small" style="color: white;">
-                    Copyright 2018 - #terkumpul All Right Reserved
-                </p>
+                Copyright 2018 - #terkumpul All Right Reserved
+            </p>
         </div>
 
     </footer>
-    
+
     <!--////-->
 
 
