change font orientation

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!--Category campaign-->
     <h2 class="categories">
-        <p class="has-text-centered" style=" font-family: 'PT Serif', serif; font-size: 40px; font-weight: bold;"> Donasikan barang berdasarkan kategori : </p>
+        <p class="has-text-centered" style=" font-family: 'Roboto', sans-serif; font-size: 40px; font-weight: bold;"> Donasikan barang berdasarkan kategori : </p>
     </h2>
     <div class="columns tile is-ancestor has-text-centered is-centered">
         <div class="column tile is-parent is-3 ">
@@ -192,7 +192,7 @@
 
     <div class="maincon" style="background-color: #CDE2FB">
         <div class="container">
-            <p class="maincampaign has-text-centered" style="font-family: 'PT Serif', serif; font-size: 40px; font-weight: bold;"> Campaign untuk #temanbaik : </p>
+            <p class="maincampaign has-text-centered" style="font-family: 'Roboto', sans-serif; font-size: 40px; font-weight: bold;"> Campaign untuk #temanbaik : </p>
             <div class="tile is-ancestor">
                 <!---->
                 <div class="tile is-parent ">
@@ -451,12 +451,12 @@
     <!--Button-->
     <div class="buttoncon container">
         <h2>
-            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 40px; font-weight: bold;">
+            <p class="has-text-centered" style="font-family: 'Roboto', sans-serif; font-size: 40px; font-weight: bold;">
                 Buat campaign dan Jadi relawan #terkumpul
             </p>
         </h2>
         <h3>
-            <p class="has-text-centered" style="font-family: 'PT Serif', serif; font-size: 30px;">
+            <p class="has-text-centered" style="font-family: 'Roboto', sans-serif; font-size: 30px;">
                 Dukungan #temanbaik akan membantu #temanbaik lainnya.
             </p>
         </h3>
